fix test results date selector alignment

--- a/frontend/src/app/testResults/TestResultsList.scss
+++ b/frontend/src/app/testResults/TestResultsList.scss
@@ -36,6 +36,10 @@
     max-width: 2.5em;
   }
 
+  .usa-date-picker__calendar {
+    min-width: 16rem;
+  }
+
   .usa-error-message {
     max-width: 11rem;
   }
